--- a/help/ChangeLog
+++ b/help/ChangeLog
@@ -1,3 +1,8 @@
+2000-12-24  Michael Natterer  <mitch@gimp.org>
+
+	* Pre 1.2 Version 5 with some fixes for the path documentation
+	from Andy Thomas.
+
 2000-12-19  Michael Natterer  <mitch@gimp.org>
 
 	* yes-i-patched-them-all-again ... Pre 1.2 Version 4
