This is not my day :)
Former-commit-id: 274a33a063ae556777f4907bf2eaf545c188358c

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 2000-12-24  Michael Natterer  <mitch@gimp.org>
 
 	* app/color_cmds.c
+	* app/threshold.c
 	* tools/pdbgen/pdb/color.pdb: my last s/rangechanged/range_changed/
 	somehow was not really "g" ;)
 
