--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sun Dec 24 23:18:32 PST 2000 Manish Singh <yosh@gimp.org>
+
+	* Made 1.2.0 release
+
 Sun Dec 24 12:24:01 PST 2000 Manish Singh <yosh@gimp.org>
 
 	* app/Makefile.am
