--- a/po-script-fu/fi.po
+++ b/po-script-fu/fi.po
@@ -151,7 +151,8 @@ msgid ""
 "Script-Fu Error while executing\n"
 " %s\n"
 "%s"
-msgstr "Script-Fu Virhe suorittaessa\n"
+msgstr ""
+"Script-Fu Virhe suorittaessa\n"
 " %s\n"
 "%s"
 
