--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2000-12-25  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* no.po: Fixed up Norwegian translation.
+	
 2000-12-22  Szabolcs Ban <shooby@gnome.hu>
 
 	* hu.po: Updated Hungarian translation from
