--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Tue Dec 26 11:10:23 PST 2000 Manish Singh <yosh@gimp.org>
+
+	* app/patterns.c: fix fd leak on loading
+
 Sun Dec 24 23:18:32 PST 2000 Manish Singh <yosh@gimp.org>
 
 	* Made 1.2.0 release
